refactor project - implement ApiClientManager logic